--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   equatable: ^2.0.8
   json_annotation: ^4.8.1
   cached_network_image: ^3.4.1
+  image_picker: ^1.2.1
+  speech_to_text: ^7.3.0
+  permission_handler: ^12.0.1
+  intl: ^0.20.2
+  uuid: ^4.5.2
 
 dev_dependencies:
   flutter_test:
@@ -68,10 +73,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/bb108892-f93d-4d7f-92d7-a1ec7dcd5757.png
+    - assets/FLYINGELEPHANTLOGO.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
